load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library")

go_library(
    name = "ice-tcp_lib",
    srcs = ["main.go"],
    importpath = "github.com/pion/webrtc/v3/examples/ice-tcp",
    visibility = ["//visibility:private"],
    deps = select({
        "@io_bazel_rules_go//go/platform:aix": [
            "//webrtc",
        ],
        "@io_bazel_rules_go//go/platform:android": [
            "//webrtc",
        ],
        "@io_bazel_rules_go//go/platform:darwin": [
            "//webrtc",
        ],
        "@io_bazel_rules_go//go/platform:dragonfly": [
            "//webrtc",
        ],
        "@io_bazel_rules_go//go/platform:freebsd": [
            "//webrtc",
        ],
        "@io_bazel_rules_go//go/platform:illumos": [
            "//webrtc",
        ],
        "@io_bazel_rules_go//go/platform:ios": [
            "//webrtc",
        ],
        "@io_bazel_rules_go//go/platform:linux": [
            "//webrtc",
        ],
        "@io_bazel_rules_go//go/platform:netbsd": [
            "//webrtc",
        ],
        "@io_bazel_rules_go//go/platform:openbsd": [
            "//webrtc",
        ],
        "@io_bazel_rules_go//go/platform:plan9": [
            "//webrtc",
        ],
        "@io_bazel_rules_go//go/platform:solaris": [
            "//webrtc",
        ],
        "@io_bazel_rules_go//go/platform:windows": [
            "//webrtc",
        ],
        "//conditions:default": [],
    }),
)

go_binary(
    name = "ice-tcp",
    embed = [":ice-tcp_lib"],
    visibility = ["//visibility:public"],
)
