load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library")

go_library(
    name = "play-from-disk-renegotation_lib",
    srcs = ["main.go"],
    importpath = "github.com/pion/webrtc/v3/examples/play-from-disk-renegotation",
    visibility = ["//visibility:private"],
    deps = select({
        "@io_bazel_rules_go//go/platform:aix": [
            "//webrtc",
            "//webrtc/pkg/media",
            "//webrtc/pkg/media/ivfreader",
            "@com_github_pion_randutil//:randutil",
        ],
        "@io_bazel_rules_go//go/platform:android": [
            "//webrtc",
            "//webrtc/pkg/media",
            "//webrtc/pkg/media/ivfreader",
            "@com_github_pion_randutil//:randutil",
        ],
        "@io_bazel_rules_go//go/platform:darwin": [
            "//webrtc",
            "//webrtc/pkg/media",
            "//webrtc/pkg/media/ivfreader",
            "@com_github_pion_randutil//:randutil",
        ],
        "@io_bazel_rules_go//go/platform:dragonfly": [
            "//webrtc",
            "//webrtc/pkg/media",
            "//webrtc/pkg/media/ivfreader",
            "@com_github_pion_randutil//:randutil",
        ],
        "@io_bazel_rules_go//go/platform:freebsd": [
            "//webrtc",
            "//webrtc/pkg/media",
            "//webrtc/pkg/media/ivfreader",
            "@com_github_pion_randutil//:randutil",
        ],
        "@io_bazel_rules_go//go/platform:illumos": [
            "//webrtc",
            "//webrtc/pkg/media",
            "//webrtc/pkg/media/ivfreader",
            "@com_github_pion_randutil//:randutil",
        ],
        "@io_bazel_rules_go//go/platform:ios": [
            "//webrtc",
            "//webrtc/pkg/media",
            "//webrtc/pkg/media/ivfreader",
            "@com_github_pion_randutil//:randutil",
        ],
        "@io_bazel_rules_go//go/platform:linux": [
            "//webrtc",
            "//webrtc/pkg/media",
            "//webrtc/pkg/media/ivfreader",
            "@com_github_pion_randutil//:randutil",
        ],
        "@io_bazel_rules_go//go/platform:netbsd": [
            "//webrtc",
            "//webrtc/pkg/media",
            "//webrtc/pkg/media/ivfreader",
            "@com_github_pion_randutil//:randutil",
        ],
        "@io_bazel_rules_go//go/platform:openbsd": [
            "//webrtc",
            "//webrtc/pkg/media",
            "//webrtc/pkg/media/ivfreader",
            "@com_github_pion_randutil//:randutil",
        ],
        "@io_bazel_rules_go//go/platform:plan9": [
            "//webrtc",
            "//webrtc/pkg/media",
            "//webrtc/pkg/media/ivfreader",
            "@com_github_pion_randutil//:randutil",
        ],
        "@io_bazel_rules_go//go/platform:solaris": [
            "//webrtc",
            "//webrtc/pkg/media",
            "//webrtc/pkg/media/ivfreader",
            "@com_github_pion_randutil//:randutil",
        ],
        "@io_bazel_rules_go//go/platform:windows": [
            "//webrtc",
            "//webrtc/pkg/media",
            "//webrtc/pkg/media/ivfreader",
            "@com_github_pion_randutil//:randutil",
        ],
        "//conditions:default": [],
    }),
)

go_binary(
    name = "play-from-disk-renegotation",
    embed = [":play-from-disk-renegotation_lib"],
    visibility = ["//visibility:public"],
)
