load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library")

go_library(
    name = "simulcast_lib",
    srcs = ["main.go"],
    importpath = "github.com/pion/webrtc/v3/examples/simulcast",
    visibility = ["//visibility:private"],
    deps = select({
        "@io_bazel_rules_go//go/platform:aix": [
            "//webrtc",
            "//webrtc/examples/internal/signal",
            "@com_github_pion_interceptor//:interceptor",
            "@com_github_pion_rtcp//:rtcp",
        ],
        "@io_bazel_rules_go//go/platform:android": [
            "//webrtc",
            "//webrtc/examples/internal/signal",
            "@com_github_pion_interceptor//:interceptor",
            "@com_github_pion_rtcp//:rtcp",
        ],
        "@io_bazel_rules_go//go/platform:darwin": [
            "//webrtc",
            "//webrtc/examples/internal/signal",
            "@com_github_pion_interceptor//:interceptor",
            "@com_github_pion_rtcp//:rtcp",
        ],
        "@io_bazel_rules_go//go/platform:dragonfly": [
            "//webrtc",
            "//webrtc/examples/internal/signal",
            "@com_github_pion_interceptor//:interceptor",
            "@com_github_pion_rtcp//:rtcp",
        ],
        "@io_bazel_rules_go//go/platform:freebsd": [
            "//webrtc",
            "//webrtc/examples/internal/signal",
            "@com_github_pion_interceptor//:interceptor",
            "@com_github_pion_rtcp//:rtcp",
        ],
        "@io_bazel_rules_go//go/platform:illumos": [
            "//webrtc",
            "//webrtc/examples/internal/signal",
            "@com_github_pion_interceptor//:interceptor",
            "@com_github_pion_rtcp//:rtcp",
        ],
        "@io_bazel_rules_go//go/platform:ios": [
            "//webrtc",
            "//webrtc/examples/internal/signal",
            "@com_github_pion_interceptor//:interceptor",
            "@com_github_pion_rtcp//:rtcp",
        ],
        "@io_bazel_rules_go//go/platform:linux": [
            "//webrtc",
            "//webrtc/examples/internal/signal",
            "@com_github_pion_interceptor//:interceptor",
            "@com_github_pion_rtcp//:rtcp",
        ],
        "@io_bazel_rules_go//go/platform:netbsd": [
            "//webrtc",
            "//webrtc/examples/internal/signal",
            "@com_github_pion_interceptor//:interceptor",
            "@com_github_pion_rtcp//:rtcp",
        ],
        "@io_bazel_rules_go//go/platform:openbsd": [
            "//webrtc",
            "//webrtc/examples/internal/signal",
            "@com_github_pion_interceptor//:interceptor",
            "@com_github_pion_rtcp//:rtcp",
        ],
        "@io_bazel_rules_go//go/platform:plan9": [
            "//webrtc",
            "//webrtc/examples/internal/signal",
            "@com_github_pion_interceptor//:interceptor",
            "@com_github_pion_rtcp//:rtcp",
        ],
        "@io_bazel_rules_go//go/platform:solaris": [
            "//webrtc",
            "//webrtc/examples/internal/signal",
            "@com_github_pion_interceptor//:interceptor",
            "@com_github_pion_rtcp//:rtcp",
        ],
        "@io_bazel_rules_go//go/platform:windows": [
            "//webrtc",
            "//webrtc/examples/internal/signal",
            "@com_github_pion_interceptor//:interceptor",
            "@com_github_pion_rtcp//:rtcp",
        ],
        "//conditions:default": [],
    }),
)

go_binary(
    name = "simulcast",
    embed = [":simulcast_lib"],
    visibility = ["//visibility:public"],
)
