load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library")

go_library(
    name = "trickle-ice_lib",
    srcs = ["main.go"],
    importpath = "github.com/pion/webrtc/v3/examples/trickle-ice",
    visibility = ["//visibility:private"],
    deps = [
        "//webrtc",
        "@org_golang_x_net//websocket",
    ],
)

go_binary(
    name = "trickle-ice",
    embed = [":trickle-ice_lib"],
    visibility = ["//visibility:public"],
)
