load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "util",
    srcs = ["util.go"],
    importpath = "github.com/pion/webrtc/v3/internal/util",
    visibility = ["//webrtc:__subpackages__"],
    deps = ["@com_github_pion_randutil//:randutil"],
)

go_test(
    name = "util_test",
    srcs = ["util_test.go"],
    embed = [":util"],
)
