load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library")

go_library(
    name = "jsfiddle_lib",
    srcs = ["main.go"],
    importpath = "github.com/pion/webrtc/v3/examples/data-channels/jsfiddle",
    visibility = ["//visibility:private"],
    deps = select({
        "@io_bazel_rules_go//go/platform:js_wasm": [
            "//webrtc",
            "//webrtc/examples/internal/signal",
        ],
        "//conditions:default": [],
    }),
)

go_binary(
    name = "jsfiddle",
    embed = [":jsfiddle_lib"],
    visibility = ["//visibility:public"],
)
