load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library")

go_library(
    name = "answer_lib",
    srcs = ["main.go"],
    importpath = "github.com/pion/webrtc/v3/examples/pion-to-pion/answer",
    visibility = ["//visibility:private"],
    deps = [
        "//webrtc",
        "//webrtc/examples/internal/signal",
    ],
)

go_binary(
    name = "answer",
    embed = [":answer_lib"],
    visibility = ["//visibility:public"],
)
