load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library")

go_library(
    name = "offer_lib",
    srcs = ["main.go"],
    importpath = "github.com/pion/webrtc/v3/examples/pion-to-pion/offer",
    visibility = ["//visibility:private"],
    deps = [
        "//webrtc",
        "//webrtc/examples/internal/signal",
    ],
)

go_binary(
    name = "offer",
    embed = [":offer_lib"],
    visibility = ["//visibility:public"],
)
